--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { 
+  "scripts": {
     "start": "parcel ./src/index.html",
+    "prebuild": "npx rimraf build",
+    "dev": "parcel src/index.html src/js/validation.js scss/style.scss src/assets/*",
+    "build": "parcel build src/index.html src/js/app.js src/css/custom.scss src/assets/* --public-url . -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "webapp",
+    "webdev",
+    "parcel",
+    "sass",
+    "scss"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.11.2",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
