--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap-icons": "^1.7.2"
   },
   "devDependencies": {
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.49.0"
   }
